chgmgmt_build/src/objects/JobOffer__c.object
<CustomObject>
    <fields>
        <fullName>ApplicantsCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>募集終了</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>承認ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>未承認</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>承認済</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CEO_approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>募集職位がディレクターおよび上位の場合選択が必要</inlineHelpText>
        <label>CEO</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>募集 (CEO)</relationshipLabel>
        <relationshipName>hire_ceo_to_employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment_1__c</fullName>
        <label>コメント(募集人数以内でない場合)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_2__c</fullName>
        <label>コメント(給与レンジ内でない場合)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Job_Holder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>現在の該当従業員</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>募集 (現在の該当従業員)</relationshipLabel>
        <relationshipName>Hire_to_Employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disclose_to_Agency__c</fullName>
        <label>採用エージェンシーへの公開</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>公開</fullName>
                </value>
                <value>
                    <fullName>非公開</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dvision_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>組織</label>
        <referenceTo>Organization__c</referenceTo>
        <relationshipLabel>募集</relationshipLabel>
        <relationshipName>Hiring_to_org</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employment_Type__c</fullName>
        <label>雇用タイプ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Permanent Full time</fullName>
                </value>
                <value>
                    <fullName>Permanent Part time</fullName>
                </value>
                <value>
                    <fullName>Temporary Full time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Salary__c</fullName>
        <inlineHelpText>人事本部に相談ください</inlineHelpText>
        <label>想定給与額</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>入社希望日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>準備中</fullName>
                </value>
                <value>
                    <fullName>依頼済</fullName>
                </value>
                <value>
                    <fullName>募集中</fullName>
                </value>
                <value>
                    <fullName>募集完了</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_decision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>ディレクターおよびその上位の職位の募集の場合、CEOの最終面接が必須</inlineHelpText>
        <label>最終面接者</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>募集 (最終面接者)</relationshipLabel>
        <relationshipName>hire_i_to_Employee_4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HR_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>人事本部担当者</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>募集 (人事本部担当者)</relationshipLabel>
        <relationshipName>hire_hrrv_to_employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HR_VP_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>人事本部担当VP</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>募集 (人事本部担当VP)</relationshipLabel>
        <relationshipName>hire_hrvp_to_employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interviewer_1st__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>1次面接者</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>募集 (1次面接者)</relationshipLabel>
        <relationshipName>hire_i_to_Employee_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interviewer_2nd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>2次面接者</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>募集 (2次面接者)</relationshipLabel>
        <relationshipName>hire_i_to_Employee_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interviewer_3rd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>3次面接者</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>募集 (3次面接者)</relationshipLabel>
        <relationshipName>hire_i_to_Employee_3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JobProfile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ジョブプロファイル</label>
        <referenceTo>JobProfile__c</referenceTo>
        <relationshipLabel>募集</relationshipLabel>
        <relationshipName>JobProfile</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MainLead__c</fullName>
        <label>メインリード</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OpenRange__c</fullName>
        <label>募集範囲</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>外部のみ</fullName>
                </value>
                <value>
                    <fullName>内部のみ</fullName>
                </value>
                <value>
                    <fullName>外部・内部</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position_Title__c</fullName>
        <label>募集タイトル</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Hire__c</fullName>
        <label>募集理由</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Backfill</fullName>
                </value>
                <value>
                    <fullName>Incremental</fullName>
                </value>
                <value>
                    <fullName>Temp to Perm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recruiter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>採用担当者</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>募集</relationshipLabel>
        <relationshipName>JobOffer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recruiting_start_day__c</fullName>
        <label>募集開始日</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>担当者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>rRep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_to_Title__c</fullName>
        <label>直属上司(職位)</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReqPersons__c</fullName>
        <label>募集人数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequestDate__c</fullName>
        <label>依頼日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>該当する場合は選択</inlineHelpText>
        <label>担当SVP</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>募集 (シニアバイスプレジデント)</relationshipLabel>
        <relationshipName>hire_svpname_to_employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salary_Range__c</fullName>
        <defaultValue>false</defaultValue>
        <label>給与レンジ内か</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubLead__c</fullName>
        <label>サブリード</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Within_HC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>承認済の募集人数内か</label>
        <type>Checkbox</type>
    </fields>
    <label>募集</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>JobProfile__c</columns>
        <columns>ReqPersons__c</columns>
        <columns>MainLead__c</columns>
        <columns>SubLead__c</columns>
        <columns>Field3__c</columns>
        <columns>Recruiter__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <columns>NAME</columns>
        <columns>JobProfile__c</columns>
        <columns>ReqPersons__c</columns>
        <columns>MainLead__c</columns>
        <columns>SubLead__c</columns>
        <columns>Field3__c</columns>
        <columns>Recruiter__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field3__c</field>
            <operation>equals</operation>
            <value>募集中</value>
        </filters>
        <label>募集中のJob（採用エージェント用）</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>募集名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>